# ngff-zarr

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  DEVELOPMENT.md  LICENSE.txt  README.md  pyproject.toml  to_ngff_image.py
.github/: copilot-instructions.md
.github/workflows/: browser-tests.yml  mcp-ci.yml  pixi-test.yml  python-pixi.yml  python.yml  test.yml  typescript.yml
docs/: array_api.md  cli.md  conf.py  development.md  faq.md  hcs.md  index.md  installation.md  itk.md  mcp.md  methods.md  python.md  quick_start.md  requirements.txt  rfc4.md  spec_features.md
mcp/: .gitignore  CHANGELOG.md  README.md  demo.py  demo_structure.py  pyproject.toml
mcp/examples/: claude-desktop-config.json  sse-config.json
mcp/ngff_zarr_mcp/: __init__.py  models.py  server.py  tools.py  utils.py
mcp/tests/: conftest.py  test_basic.py  test_convert_to_ome_zarr.py  test_tensorstore_compression.py
ngff_zarr/: __about__.py  __init__.py  _array_split.py  _zarr_kwargs.py  _zarr_open_array.py  cli.py  cli_input_to_ngff_image.py  config.py  cucim_image_to_multiscales.py  cucim_image_to_ngff_image.py  detect_cli_input_backend.py  detect_cli_io_backend.py  from_ngff_zarr.py  itk_image_to_ngff_image.py  memory_usage.py  metadata.py  multiscales.py  ngff_image.py  ngff_image_to_itk_image.py  rich_dask_progress.py  task_count.py  to_multiscales.py  to_ngff_image.py  to_ngff_zarr.py  to_zarr.py  validate.py  zarr_metadata.py
ngff_zarr/methods/: __init__.py  _dask_image.py  _itk.py  _itkwasm.py  _support.py
ngff_zarr/spec/0.1/schemas/: strict_image.schema
ngff_zarr/spec/0.3/schemas/jsonld/: context.json
ngff_zarr/v04/: zarr_metadata.py
ngff_zarr/v05/: zarr_metadata.py
py/: .gitignore  README.md  pyproject.toml
py/ngff_zarr/: __about__.py  __init__.py  cli.py  cli_input_to_ngff_image.py  config.py  detect_cli_io_backend.py  from_ngff_zarr.py  hcs.py  itk_image_to_ngff_image.py  multiscales.py  ngff_image.py  ngff_image_to_itk_image.py  rfc4.py  rfc4_validation.py  to_multiscales.py  to_ngff_image.py  to_ngff_zarr.py  validate.py  zarr_metadata.py
py/ngff_zarr/methods/: __init__.py  _itkwasm.py  _metadata.py
py/ngff_zarr/spec/0.1/schemas/: plate.schema
py/ngff_zarr/spec/0.2/schemas/: plate.schema
py/ngff_zarr/spec/0.3/schemas/: plate.schema  strict_image.schema
py/ngff_zarr/spec/0.3/schemas/jsonld/: frame.json
py/ngff_zarr/spec/0.3/schemas/salad_schema/: image.yml
py/ngff_zarr/spec/0.4/schemas/: strict_image.schema
py/ngff_zarr/v04/: zarr_metadata.py
py/ngff_zarr/v05/: zarr_metadata.py
py/ngff_zarr/v06/: zarr_metadata.py
py/test/: _data.py  test_cache_behavior.py  test_detect_cli_input_backend.py  test_direct_compression.py  test_from_ngff_zarr.py  test_from_ngff_zarr_tensorstore.py  test_hcs.py  test_hcs_cache.py  test_hcs_simple.py  test_hcs_zarr_format.py  test_index_out_of_range.py  test_memory_usage.py  test_multiscales_metadata.py  test_multiscales_type.py  test_ngff_image_scale_factors.py  test_ngff_validation.py  test_pyramid_integrity.py  test_rfc4.py  test_rfc4_integration.py  test_rfc4_integration_validation.py  test_rfc4_validation.py  test_simple_cache.py  test_task_count.py  test_to_multiscales_translate.py  test_to_ngff_zarr_itk.py  test_to_ngff_zarr_itkwasm.py  test_to_ngff_zarr_kvikio.py  test_to_ngff_zarr_sharding.py  test_to_ngff_zarr_tensorstore.py  test_to_ngff_zarr_v3_compression.py  test_write_hcs_well_image_edge_cases.py
test/: __init__.py  _data.py  conftest.py  test_cli_input_to_ngff_image.py  test_convert_ome_zarr_version.py  test_detect_cli_input_backend.py  test_dimension_separator.py  test_from_ngff_zarr.py  test_itk_image_to_ngff_image.py  test_large_serialization.py  test_memory_usage.py  test_ngff_image_scale_factors.py  test_ngff_image_to_itk_image.py  test_ngff_validation.py  test_omero.py  test_pyramid_integrity.py  test_task_count.py  test_to_multiscales.py  test_to_multiscales_translate.py  test_to_ngff_zarr_compression.py  test_to_ngff_zarr_dask_image.py  test_to_ngff_zarr_itk.py  test_to_ngff_zarr_itkwasm.py  test_to_ngff_zarr_kvikio.py  test_to_ngff_zarr_rfc2_zarr_v3.py  test_to_ngff_zarr_sharding.py  test_to_ngff_zarr_tensorstore.py  test_to_ngff_zarr_v3_compression.py
ts/: .gitignore  README.md  deno.json  pixi.toml  playwright.config.js
ts/examples/: ome_zarr_validation.ts  zarrita_v0.5_example.ts
ts/scripts/: build.ts  build_npm.ts  run_playwright.mjs
ts/src/: browser-mod.ts  mod.ts
ts/src/io/: from_ngff_zarr.ts  hcs.ts  itk_image_to_ngff_image.ts  ngff_image_to_itk_image.ts  reader.ts  to_multiscales.ts  to_ngff_zarr.ts  writer.ts  zarr_reader.ts  zarr_writer.ts
ts/src/schemas/: coordinate_systems.ts  dask_array.ts  index.ts  lazy_array.ts  methods.ts  multiscales.ts  ngff_image.ts  ome_zarr.ts  rfc4.ts  units.ts  zarr_metadata.ts
ts/src/types/: array_interface.ts  dask_array.ts  hcs.ts  lazy_array.ts  methods.ts  multiscales.ts  ngff_image.ts  rfc4.ts  units.ts  zarr_metadata.ts
ts/src/utils/: create_queue.ts  factory.ts  method_metadata.ts  validation.ts
ts/test/: convert_ome_zarr_version_test.ts  from_ngff_zarr_test.ts  hcs_test.ts  itk_data_writing_test.ts  itk_image_to_ngff_image_simple_test.ts  ngff_image_to_itk_image_test.ts  omero_test.ts  rfc4_rfc5_schemas_test.ts  schemas_extended_test.ts  schemas_test.ts  test_multiscales_metadata_test.ts  types_test.ts  utils_test.ts  verify_against_baseline.ts
ts/test/browser/: server.ts
ts/test/browser-npm/: .gitignore  browser-test.html  bundle-test.html  direct-test.html  index.html  ngff-zarr.test.js  package-lock.json  package.json  playwright.config.js  simple-test.html
ts/test/schemas/: test_ome_zarr.ts
