[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ngff-zarr"
description = ''
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "Matt McCormick", email = "matt.mccormick@kitware.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "numpy",
    "zarr",
    "dask[array]",
    "platformdirs",
    "rich",
    "typing_extensions",
    "psutil; sys_platform != \"emscripten\""
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/thewtex/ngff-zarr#readme"
Issues = "https://github.com/thewtex/ngff-zarr/issues"
Source = "https://github.com/thewtex/ngff-zarr"

[project.scripts]
ngff-zarr = "ngff_zarr.cli:main"

[tool.hatch.version]
path = "ngff_zarr/__about__.py"

[project.optional-dependencies]
dask-image = [
    "dask-image",
]
itk = [
    "itk-filtering>=5.3.0",
]
cli = [
    "dask-image",
    "dask[distributed]",
    "itk-filtering>=5.3.0",
    "itk-io>=5.3.0",
    "imageio",
    "tifffile",
]
test = [
    "pytest",
    "pooch",
    "itkwasm",
    "itk-io>=5.3.0",
    "itk-filtering>=5.3.0",
    "tifffile",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.black]
line-length = 88
